# ctf-writeups

./: .gitmodules  pyproject.toml
alpacahack/02_web/: simple-login.md
alpacahack/11_web/: jackpot.md
alpacahack/cakectf-2023/: country-db.md
contest/2025/BreakTheSyntaxCT2025/crypto/: roulette.py
contest/2025/BreakTheSyntaxCT2025/forensics/: copypasta.md  monkey-see.py
contest/2025/BreakTheSyntaxCT2025/misc/: based.md  sanity-check.md  stupid-fd-manager.md
contest/2025/BreakTheSyntaxCT2025/rev/: based-encoder.md  rainbom-bash-adventure.py  translator.py
contest/2025/BreakTheSyntaxCT2025/web/: lightweight.py
contest/2025/BreakTheSyntaxCTF2025/crypto/: neo-diffie-hellman.py
contest/2025/BreakTheSyntaxCTF2025/forensics/: monkey-paint.py
contest/2025/BreakTheSyntaxCTF2025/rev/rainbom-bash-adventure/: solve.py
contest/2025/DevSecOpsCTF2025/: README.md
contest/2025/DevSecOpsCTF2025/ai_guardrails/: just-ask-for-the-flag-intro.md
contest/2025/DevSecOpsCTF2025/ai_tools/: ai-tool-abuse-intro.md
contest/2025/DevSecOpsCTF2025/cicd/: a-simple-fix-i.md  jenkins-intro.md
contest/2025/DevSecOpsCTF2025/password/: password-cracking-5.md
contest/2025/DevSecOpsCTF2025/web/: blogged-again.md  financial-data-breach.md  zorses-awareness.md
contest/2025/TsukuCTF2025/: README.md
contest/2025/TsukuCTF2025/crypto/: PQC0.md  a8tsukuctf.md
contest/2025/TsukuCTF2025/osint/: destroyed.md
contest/2025/TsukuCTF2025/web/: YAMLwaf.md  flash.md  len_len.md
